base file delivery
