# model/openapi.yml
@@ -1251,3 +1251,44 @@ paths:
           $ref: '#/components/responses/internalServerError'
         '503':
           $ref: '#/components/responses/unavailable'
+  /api/fleet/file/{id}:
+    get:
+      operationId: getFile
+      summary: retrieve stored file for integration
+      description: "Stream out file contents to an agent or integration, provided there is a matching and authorized file stored in elasticsearch."
+      security:
+        - agentApiKey: []
+      parameters:
+        - name: id
+          in: path
+          description: The file_id as provided to the integration
+          required: true
+          schema:
+            type: string
+            example: ecb30383-6dd1-4b1d-bed0-2386b4e5df51
+      responses:
+        '200':
+          description: file contents
+        '400':
+          $ref: '#/components/responses/badRequest'
+        '401':
+          $ref: '#/components/responses/keyNotEnabled'
+        '403':
+          description: The requesting entity is not permitted to access the requested file
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                unauthorized:
+                  description: The file is not accessible
+                  value:
+                    statusCode: 403
+                    error: Forbidden
+                    message: Client is not authorized
+        '404':
+          description: bad path, file not found
+        '500':
+          $ref: '#/components/responses/internalServerError'
+        '503':
+          $ref: '#/components/responses/unavailable'
